--- a/_includes/resume.html
+++ b/_includes/resume.html
@@ -1,68 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Chris Turner's Resume</title>
-    <meta name="description" content="Chris Turner's Résumé">
-    <meta name="author" content="Chris Turner @twitter">
-
+    <title>My CV</title>
+    <meta name="description" content="My CV">
+    <meta name="author" content="My CV @twitter">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
-    <link rel="stylesheet" href="/vitae/static/css/base.css">
-    <link rel="stylesheet" href="/vitae/static/css/skeleton.css">
-    <link rel="stylesheet" href="/vitae/static/css/layout.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/static/css/base.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/static/css/skeleton.css">
+    <link rel="stylesheet" href="{{ site.baseurl }}/static/css/layout.css">
     <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
-    <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <link rel="shortcut icon" href="/vitae/static/img/favicon.ico">
-    <!-- <link rel="apple-touch-icon" href="static/img/me-icon-57.png"> -->
-    <!-- <link rel="apple-touch-icon" sizes="72x72" href="static/img/me-icon-72.png"> -->
-    <!-- <link rel="apple-touch-icon" sizes="114x114" href="static/img/me-icon-114.png"> -->
 </head>
 <body>
 <div class="container">
-    <header class="three columns">
-        <img src="/vitae/static/img/profile.png" class="me">
-        <h1>Chris Turner</h1>
+    <header class="four columns">
+        <img src="{{ site.baseurl }}/static/img/profile.jpg" class="me">
+        <h1>Vaios Laschos</h1>
         <p>
-            <a href="tel:+440000000000">+44 0000 000000</a>
+            <a href="tel:+4915780744980">+4915780744980</a>
         </p>
         <address>
-            <a href="https://www.google.co.uk/maps/place/44+Perth+St,+Edinburgh,+Edinburgh+City+EH3+5BL">
-                44 Perth Street<br/>
-                EH3 5BL<br/>
-                Edinburgh<br/>
-                United Kingdom
+            <a href="https://www.google.de/maps/place/Weierstra%C3%9F+Institut+f%C3%BCr+Angewandte+Analysis+und+Stochastik/@52.5125351,13.3938521,17z/data=!3m1!4b1!4m2!3m1!1s0x47a851d9edd75f7b:0x8fe84edba1eae742?hl=en">
+                Mohrenstrasdse 39<br/>
+                10117, Berlin<br/>
+                Germany
             </a>
         </address>
         <p>
-            <a href="https://biomadeira.github.io/sustain">github.io/sustain</a><br/>
-        </p>
-        <p>
-            <a href="mailto:youremail@me.com">christurner@me.com</a><br/>
-            <a href="https://github.com/trending"><i class="fa fa-github"></i> Github</a> /
-            <a href="https://twitter.com/twitter"><i class="fa fa-twitter"></i> Twitter</a>
+            <a href="mailto:Vaios.laschos@wias-berlin.de">Vaios.laschos@wias-berlin.de</a><br/>
+            <a href="https://www.linkedin.com/in/vaios-laschos-882b01b6?trk=hp-identity-name"><i class="fa fa-linkedin"></i> Linkedin</a> /
+            <a href="https://www.facebook.com/vaios.laschos"><i class="fa fa-facebook"></i> Facebook</a>
         </p>
     </header>
-    <div class="thirteen columns clearfix">
+    <div class="twelve columns clearfix">
 
-        <section class="thirteen columns">
-    <h1>Employment</h1>
+        <section class="twelve columns">
+    <h1>Academic Appointments</h1>
     <article>
         <header>
-            <h1>Software Engineer</h1>
-            <span><address>Edinburgh, UK</address><time>2015 to Present</time></span>
+            <h1><a href="https://www.wias-berlin.de/"> WIAS </a></h1>
+            <span><address>Berlin, Germany</address><time>November 2015 to Present</time></span>
         </header>
         <p>Lorem ipsum dolor sit amet, his et viris petentium philosophia,
             at vix debitis deleniti. At vis velit volumus alienum, agam vocent assueverit usu ex. </p>
     </article>
     <article>
         <header>
-            <h1>iOS Developer</h1>
-            <span><address>Glasgow, UK</address><time>2014 to 2015</time></span>
+            <h1>
+			<a href="https://www.brown.edu/academics/applied-mathematics/"> Brown University </a>
+            </h1>
+			<span><address>Providence, USA</address> <time>August 2013 to 2015</time></span>
         </header>
         <p>Qui bonorum menandri intellegebat ex, mel quando oblique an. Et eam virtute debitis philosophia,
             unum ancillae disputationi vim in. Ipsum vidisse meliore ex eum,
@@ -70,126 +56,101 @@
     </article>
     <article>
         <header>
-            <h1>Teaching Assistant</h1>
+            <h1><a href="http://www.mis.mpg.de/index.html">Max-Planck Institute</a></h1>
             <span><address>University of Glasgow, Glasgow, UK</address><time>2013 to 2014</time></span>
         </header>
         <p>Latine bonorum deserunt at nam. Mea nisl officiis eu, propriae similique has te, mei an brute meliore electram.
             Quo admodum omittantur ei, etiam principes at eos. Sit vocent commodo ceteros in, at mel idque everti.</p>
     </article>
-    <article>
-        <header>
-            <h1>iOS Developer</h1>
-            <span><address>Student Start-up, Glasgow, UK</address><time>2013</time></span>
-        </header>
-        <p>Mucius sententiae et mei, nec an diam ignota, tale epicurei intellegebat ne sit. Sumo pertinacia contentiones duo ei.</p>
-    </article>
-    <article>
-        <header>
-            <h1>Web Developer</h1>
-            <span><address>Birmingham, UK</address><time>2007 to 2010</time></span>
-        </header>
-        <p> Et sed tritani volumus, dico rebum facilisis ea sed. His mundi efficiantur concludaturque no.
-            Cu eos argumentum constituam repudiandae, eu eum lorem nostrum, ei mel dicam iriure fabellas.
-        </p>
-    </article>
 </section>
 
 
-<section class="thirteen columns">
+<section class="twelve columns">
     <h1>Education</h1>
     <article>
         <header>
-            <h1>MSc in Advanced Computing</h1>
-            <span>University of Glasgow</span>
-            <span><address>Glasgow, UK</address><time>2011 to 2012</time></span>
+            <h1>PhD in Applied Mathematics</h1>
+            <span><a href="http://www.bath.ac.uk/math-sci/">University of Bath</a>,</span>
+            <address>Bath, UK. From 2009 to 2013</address>
         </header>
         <p>
-            <em>Thesis: Nemore verear an eos, duo accusam placerat urbanitas at, vix libris putent voluptaria ei.</em>
+            <em>Thesis: Wasserstein gradient flows via large deviations from thermodynamic limits of independent particle models.</em>
         </p>
     </article>
     <article>
         <header>
-            <h1>Major in Computer Science</h1>
-            <span>University of College London</span>
-            <span><address>London, UK</address><time>2007 to 2011</time></span>
+            <h1>Master in Pure Mathematics</h1>
+            <span><a href="http://www.math.auth.gr/en/node/44"> Aristotle University of Thessaloniki</a></span>
+            <address>Thessaloniki, Greece. From 2005 to 2009</address>
         </header>
         <p>
-            <em>Dissertation: Te dicit scripta nec, nec illud decore partem et.</em>
+            <em>Dissertation: Potential theory and Brownian motion.</em>
         </p>
+    </article>
+	 
+	  <article>
+        <header>
+            <h1>Major in Pure Mathematics</h1>
+            <span><a href="http://www.math.auth.gr/en/node/44"> Aristotle University of Thessaloniki</a></span>
+            <address>Thessaloniki, Greece. From 2000 to 2005</address>
+        </header>
     </article>
 </section>
 
 
-<section class="thirteen columns">
+<section class="twelve columns">
     <h1>Programming Skills</h1>
     <article>
         <header>
             <h1>Software engineering & web development</h1>
         </header>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
-            &nbsp;&nbsp;<em>C/C++ & Objective-C</em>
-        <p>
             <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>Java</em>, <em>Python</em>, <em>PHP</em> &amp; <em>Git</em>
+            &nbsp;&nbsp;<em>Latex</em>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>Matlab</em>, <em>PHP</em> &amp; <em>Git</em>
         </p>
         <p>
-            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i>
-            &nbsp;&nbsp;<em>HTML/CSS3</em> &amp; <em>Javascript</em>
+            <i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>HTML</em> &amp <em>Python</em>
         </p>
     </article>
 </section>
 
-<section class="thirteen columns">
-    <h1>Initiatives</h1>
+<section class="twelve columns">
+    <h1>Language Skills</h1>
     <article>
         <header>
-            <h1>Graduate Summer Student</h1>
-            <span><address>University of Glasgow, UK</address><time>2013</time></span>
+            <h1>Software engineering & web development</h1>
         </header>
         <p>
-            Courses: Nec et duis iriure temporibus, ullum adolescens eam ea.
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-half-o"></i>
+            &nbsp;&nbsp;<em>Greek, English</em>
+        <p>
+            <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>Spanish</em>
         </p>
-    </article>
-    <article>
-        <header>
-            <h1>Student Volunteer</h1>
-            <span><address>British RedCross, Glasgow, UK</address><time>2013</time></span>
-        </header>
         <p>
-            Fundraiser: Lorem adipiscing ei eam, eros conceptam maiestatis ne sea.
+          <i class="fa fa-star-half-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;<em>German</em> 
         </p>
     </article>
 </section>
 
-<section class="thirteen columns">
+<section class="twelve columns">
     <h1>Hobbies</h1>
     <article>
-        <p>Music, Movies, Tennis, Travelling, Cooking.</p>
+        <p> Climbing, Yoga, Travelling, Cooking.</p>
     </article>
 </section>
 
 
-    <footer class="thirteen columns">
+    <footer class="twelve columns">
         <p>© All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> and
             <a href="https://www.github.com/biomadeira/vitae">vitae</a> with ♥</p>
     </footer>
     </div>
-</div>
-<a href="https://github.com/biomadeira/vitae">
-    <img style="position: absolute; top: 0; right: 0; border: 0;"
-         src="https://camo.githubusercontent.com/e7bbb0521b397edbd5fe43e7f760759336b5e05f/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677265656e5f3030373230302e706e67"
-         alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png"></a>
-
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-69300817-1', 'auto');
-  ga('send', 'pageview');
-
-</script>	
+</div>	
 </body>
 </html>
