--- a/_includes/social.html
+++ b/_includes/social.html
@@ -4,7 +4,7 @@
 	  <a href="mailto:{{ site.email}}"><i class="fa fa-envelope"></i></a>
     {% endif %}
     {% if site.linkedin %}
-	  <a href="http://linkedin.com/in/{{ site.linkedin }}"><i class="fa fa-linkedin"></i></a>
+	   <a href="https://www.linkedin.com/in/vaios-laschos-882b01b6?trk=hp-identity-name"><i class="fa fa-linkedin"></i> </a>
     {% endif %}
 	</h4>
 </div>
