--- a/static/css/main.css
+++ b/static/css/main.css
@@ -163,7 +163,14 @@ body {
   line-height: 30px;
   font-size: 18px;
 }
-
+.me{
+    width: 100px;
+    height: 100px;
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    margin-bottom: 20px;
+}
 /* Footer 
 -------------------------------------------------- */
 
