--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -20,7 +20,6 @@
   <h3>Journal publications</h3>
   <div class="panel panel-default">
     <div class="panel-body">
-		
 		<h5>
 			&nbsp;&nbsp;<strong> G. Kelgiannis, V. Laschos, (2014). On a conjecture regarding
 			the upper graph box dimension of bounded subsets of the real line. Fractals. <a href="http://www.worldscientific.com/doi/abs/10.1142/S0218348X13500175"> (PDF) </a></strong>
@@ -32,7 +31,7 @@
 			<a href="http://journals.cambridge.org/action/displayAbstract?fromPage=online&aid=9064248&fileId=S1292811913000493">(PDF)</a></strong>
 		</h5>
 		<h5>
-			&nbsp;&nbsp;<strong> V. Laschos, C. Moench, (2012). Relations Between Lp- and Pointwise Convergence of 
+			&nbsp;&nbsp;<strong> V. Laschos, C. Moench, (2012). Relations Between $L^p$ - and Pointwise Convergence of 
 			Families of Functions Indexed by the Unit Interval. Real Analysis Exchange, 38(1), 177-192.
 			<a href="https://projecteuclid.org/euclid.rae/1367265647"> (PDF) </a></strong>
 		</h5>
@@ -49,8 +48,6 @@
 			</i>&nbsp;&nbsp;<strong>J. Hyde, V. Laschos, L. Olsen, I. Petrykiewicz and A. Shaw, (2010).  
 			Frequencies of digits, and Baire category. Acta Arithmetica, 144 (3), pp. 287-293.</a></strong>
 		</h5>
-
-
     </div>
   </div>
   
