--- a/_includes/publications.html
+++ b/_includes/publications.html
@@ -31,7 +31,7 @@
 			<a href="http://journals.cambridge.org/action/displayAbstract?fromPage=online&aid=9064248&fileId=S1292811913000493">(PDF)</a></strong>
 		</h5>
 		<h5>
-			&nbsp;&nbsp;<strong> V. Laschos, C. Moench, (2012). Relations Between \\(L^p\\) - and Pointwise Convergence of 
+			&nbsp;&nbsp;<strong> V. Laschos, C. Moench, (2012). Relations Between $L^p$ - and Pointwise Convergence of 
 			Families of Functions Indexed by the Unit Interval. Real Analysis Exchange, 38(1), 177-192.
 			<a href="https://projecteuclid.org/euclid.rae/1367265647"> (PDF) </a></strong>
 		</h5>
