--- a/static/css/main.css
+++ b/static/css/main.css
@@ -6,7 +6,8 @@ body {
   background-color: #fff;
   font-family: 'Source Sans Pro', sans-serif;
   /* The html and body elements cannot have any padding or margin. */
-  border-top: 3px solid #27A822;
+  border-top: 3px solid #CC7157;
+
 }
 /* Wrapper for page content to push down footer */
 #wrap {
@@ -30,26 +31,26 @@ body {
   border-color: #ffffff;
 }
 .navbar-default .navbar-brand {
-  color: #6b6b6b;
+  color: #CC7157;
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus {
-  color: #6b6b6b;
+  color: #267723;
 }
 .navbar-default .navbar-text {
-  color: #6b6b6b;
+  color: #CC7157;
 }
 .navbar-default .navbar-nav > li > a {
-  color: #6b6b6b;
+  color: #CC7157;
 }
 .navbar-default .navbar-nav > li > a:hover, .navbar-default .navbar-nav > li > a:focus {
-  color: #6b6b6b;
+  color: #267723;
 }
 .navbar-default .navbar-nav > .active > a, .navbar-default .navbar-nav > .active > a:hover, .navbar-default .navbar-nav > .active > a:focus {
-  color: #6b6b6b;
+  color: #CC7157;
   background-color: #ffffff;
 }
 .navbar-default .navbar-nav > .open > a, .navbar-default .navbar-nav > .open > a:hover, .navbar-default .navbar-nav > .open > a:focus {
-  color: #6b6b6b;
+  color: #CC7157;
   background-color: #ffffff;
 }
 .navbar-default .navbar-toggle {
@@ -59,30 +60,31 @@ body {
   background-color: #ffffff;
 }
 .navbar-default .navbar-toggle .icon-bar {
-  background-color: #6b6b6b;
+  background-color: #CC7157;
 }
 .navbar-default .navbar-collapse,
 .navbar-default .navbar-form {
-  border-color: #6b6b6b;
+  border-color: #CC7157;
 }
 .navbar-default .navbar-link {
-  color: #6b6b6b;
+  color: #CC7157;
 }
 .navbar-default .navbar-link:hover {
-  color: #6b6b6b;
+  color: #CC7157;
 }
 @media (max-width: 767px) {
   .navbar-default .navbar-nav .open .dropdown-menu > li > a {
-    color: #6b6b6b;
+    color: #CC7157;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > li > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > li > a:focus {
-    color: #6b6b6b;
+    color: #CC7157;
   }
   .navbar-default .navbar-nav .open .dropdown-menu > .active > a, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:hover, .navbar-default .navbar-nav .open .dropdown-menu > .active > a:focus {
-    color: #6b6b6b;
+    color: #CC7157;
     background-color: #ffffff;
   }
 }
+
 
 /* Custom page CSS
 -------------------------------------------------- */
@@ -96,7 +98,7 @@ body {
   margin: 20px 0;
 }
 .container a {
-  color: #27A822;
+  color: #CC7157;
 }
 .container a:hover {
   color: #267723;
@@ -120,7 +122,7 @@ body {
   font-size: 15px;
 }
 .panel-default h4 a, h5 a {
-  color: #27A822;
+  color: #CC7157;
 }
 .panel-default h4 a:hover, h5 a:hover {
   color: #267723;
@@ -140,7 +142,7 @@ body {
   color: #000000;
 }
 .avatar {
-  padding-top: 5%;
+  padding-top: 6%;
 }
 .blog-post{
   padding-top: 15px;
@@ -171,17 +173,29 @@ body {
     -moz-border-radius: 50px;
     margin-bottom: 20px;
 }
+
+.avatar img.image {
+ display:block;
+ height: auto;
+ max-width: 60%;
+ margin: 0 auto 0;
+}
+
+.avatar:hover img.image {
+display:none;
+}
+.avatar img.hover {
+display:none;
+}
+.avatar:hover img.hover{
+display:block;
+}
+
 /* Footer 
 -------------------------------------------------- */
 
-.footer {
-  text-decoration: none !important;
-}
-.text-muted {
-	color: #6b6b6b;
-}
 div.footer{
-  border-bottom: 5px solid #27A822;;
+  border-bottom: 5px solid #CC7157;
 }
 /* Set the fixed height of the footer here */
 /*.footer {
