--- a/_includes/CV.html
+++ b/_includes/CV.html
@@ -15,14 +15,14 @@
             <a href="tel:+4915780744980">+4915780744980</a>
         </p>
         <address>
-            <a href="https://www.google.de/maps/place/Weierstra%C3%9F+Institut+f%C3%BCr+Angewandte+Analysis+und+Stochastik/@52.5125351,13.3938521,17z/data=!3m1!4b1!4m2!3m1!1s0x47a851d9edd75f7b:0x8fe84edba1eae742?hl=en">
-                Mohrenstrasdse 39<br/>
-                10117, Berlin<br/>
+            <a href="https://www.google.de/maps/place/Marchstraße+23,+10587+Berlin/@52.5165872,13.3214112,17z/data=!3m1!4b1!4m5!3m4!1s0x47a8511b0709b905:0x5731d340466368bc!8m2!3d52.5165872!4d13.3235999">
+                Marchstrasse 23<br/>
+                10587, Berlin<br/>
                 Germany
             </a>
         </address>
         <p>
-            <a href="mailto:Vaios.laschos@wias-berlin.de"> <a href="mailto:Vaios.laschos@wias-berlin.de"><i class="fa fa-envelope"></i></a></a>/
+            <a href="mailto:Vaios.laschos@tu-berlin.de"> <a href="mailto:Vaios.laschos@tu-berlin.de"><i class="fa fa-envelope"></i></a></a>/
             <a href="https://www.linkedin.com/in/vaios-laschos-882b01b6?trk=hp-identity-name"><i class="fa fa-linkedin"></i> </a> /
             <a href="https://www.facebook.com/vaios.laschos"><i class="fa fa-facebook"></i> </a>/
 			 <a href="https://plus.google.com/+vaioslaschos/posts"> <i class="fa fa-google-plus"></i> </a>
@@ -40,10 +40,18 @@
     <h3>Academic Appointments</h3>
     <article>
         <header>
-            <h3><a href="https://www.wias-berlin.de/"> WIAS </a></h3>
-            <span><address>Berlin, Germany. From November 2015 to Present</time></span>
+            <h3><a href="https://www.ni.tu-berlin.de/menue/neural_information_processing_group/">Tu-Berlin</a></h3>
+            <span><address>Berlin, Germany. From January 2018 to present</time></span>
         </header>
         <p> More details to follow. </p>
+    </article>
+	<article>
+        <header>
+            <h3><a href="https://www.wias-berlin.de/"> WIAS </a></h3>
+            <span><address>Berlin, Germany. From November 2015 to December 2017</time></span>
+        </header>
+        <p>I worked along with professorr <a href="https://www.wias-berlin.de/people/mielke/"> Alexander Mielke </a> on <a href="https://arxiv.org/abs/1712.01888"> 
+		" Geometric properties of cones with applications on the Hellinger-Kantorovich space, and a new distance on the space of probability measures"</a> </p>
     </article>
     <article>
         <header>
