--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,8 +5,9 @@
     </div>
     <div id="navbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="{{ site.baseurl }}publications.html">PUBLICATIONS</a></li>
         <li><a href="{{ site.baseurl }}CV.html">CV</a></li>
+        <li><a href="{{ site.baseurl }}publications.html">Publications</a></li>      
+  		  <li><a href="{{ site.baseurl }}MTT.html">Master's Thesis Topics</a></li>  
       </ul>
     </div>
   </div>
