--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,6 +8,7 @@
         <li><a href="{{ site.baseurl }}CV.html">CV</a></li>
         <li><a href="{{ site.baseurl }}publications.html">Publications</a></li>      
   		  <li><a href="{{ site.baseurl }}MTT.html">Master's Thesis Topics</a></li>  
+         <li><a href="{{ site.baseurl }}advanced_rl.html">Advanced RL Seminar</a></li> 
       </ul>
     </div>
   </div>
