--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -1,4 +1,4 @@
-  <section id="Publications">
+  <section id="Advanced RL Seminar">
 <div class="container">
   <h3>Available topics</h3>
   <div class="panel panel-default">
