--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -1,4 +1,4 @@
-  <section id="Publications">
+  <section id="Master Thesis Topics">
 <div class="container">
   <h3>Available topics</h3>
   <div class="panel panel-default">
