--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -1,5 +1,11 @@
   <section id="Advanced topics in RReinforcement learning">
 <div class="container">
+	  <div class="avatar">
+		<img class="image"       img src="{{ site.baseurl }}/static/img/profile.jpg"> 
+		<img class="image"       img src="{{ site.baseurl }}/static/img/profile2.jpg"> 
+	  </div>
+
+<div class="container">
   <h3>Available topics</h3>
   <div class="panel panel-default">
     <div class="panel-body">
