--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -1,8 +1,8 @@
   <section id="Advanced topics in RReinforcement learning">
 <div class="container">
 	  <div class="avatar">
-		<img class="image"       img src="{{ site.baseurl }}/static/img/profile.jpg"> 
-		<img class="image"       img src="{{ site.baseurl }}/static/img/profile2.jpg"> 
+		<img class="image"       img src="{{ site.baseurl }}/static/img/Hanabi.jpg"> 
+		<img class="image"       img src="{{ site.baseurl }}/static/img/download.jpg"> 
 	  </div>
   <h3>Available topics</h3>
   <div class="panel panel-default">
