--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -1,4 +1,9 @@
-  <section id="Advanced topics in RReinforcement learning">
+   <!DOCTYPE html>
+<html lang="en">
+
+  <body>
+
+<section id="Advanced topics in RReinforcement learning">
 <div class="container">
 	  <div class="avatar">
 		<img class="image"       img src="{{ site.baseurl }}/static/img/Hanabi.jpg"> 
@@ -30,7 +35,8 @@ on multi-agent cooperative tasks. The game of Hanabi</strong>
     </div>
   </div>
    </section>
-
+	</body>
+</html>
 
 
  
