--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -1,7 +1,6 @@
-   <!DOCTYPE html>
-<html lang="en">
-
-  <body>
+---
+layout: home
+---
 
 <section id="Advanced topics in RReinforcement learning">
 <div class="container">
@@ -35,8 +34,7 @@ on multi-agent cooperative tasks. The game of Hanabi</strong>
     </div>
   </div>
    </section>
-	</body>
-</html>
+
 
 
  
