--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -2,7 +2,7 @@
 
 <section id="Advanced topics in RReinforcement learning">
 <div class="container">
-	  <div class="avatar">
+	  <div class="avatar2">
 		<img class="image"       img src="{{ site.baseurl }}/static/img/Hanabi.jpg"> 
 		<img class="image"       img src="{{ site.baseurl }}/static/img/download.jpg"> 
 	  </div>
