--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -2,8 +2,8 @@
 
 <section id="Advanced topics in RReinforcement learning">
 <div class="container">
-		<img class="img-responsive"       img src="{{ site.baseurl }}/static/img/Hanabi.jpg"> 
-		<img class="image"       img src="{{ site.baseurl }}/static/img/download.jpg">
+		<img class="img-responsive"       img src="{{ site.baseurl }}/static/img/Hanabi.jpeg"> 
+		<img class="image"       img src="{{ site.baseurl }}/static/img/download.jpeg">
   <h3>Available topics</h3>
   <div class="panel panel-default">
     <div class="panel-body">
