--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -12,11 +12,17 @@ on multi-agent cooperative tasks. The game of Hanabi</strong>
 		</h5>
       <article>
         <p>
-           <span class="math inline"> Recently Google released a new testbed for RL. The game of Hanabi has many new complexities that older testbed games like Chess and Go
-             do not exhibit. Apart from a quite big state space, the game involves partial information and cooperation between agents. This cooperation is extremely difficult
-          to model because communication between agent can contain meta-information. Although agents that are trained together can achieve high scores, when aggents with different
-          learning experience meet, they exhibit poor performance. The goal is to apply meta-learning ideas to train the agents, so they will be able to adapt to new enviroments (different set of cooperative agents).
-          </span>
+         <ol>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ol>
+
+<ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
         </p>
     </article>
     <article>
