--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -7,30 +7,33 @@
   <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
-			&nbsp;&nbsp;<strong>  Meta-learning techniques in Reinforcement Learning, with applications
-on multi-agent cooperative tasks. The game of Hanabi</strong>
+			&nbsp;&nbsp;<strong>General Information</strong>
 		</h5>
       <article>
         <p>
-         <ol>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
-</ol>
-
 <ul>
-  <li>Coffee</li>
-  <li>Tea</li>
-  <li>Milk</li>
+<li>  The lecture and tutorials are held in English.</li>
+<li>  The course is open to TU students as well as exchange students and visiting students.</li>
+<li>  No formal registration is required to attend the course or even possible. The registration is only relevant for the exam.</li>
+<li>  The exam registration procedure is announced in the first lecture. Prior registration/reservation is not possible.</li>
+<li>  Each student has to present at least one paper on a state of the art algorithm in RL (A list of papers will be uploaded soon).</li>
+<li>  Students can form groups and apply at least one of the algorithms to the toy-model of their choice.</li>
 </ul>
         </p>
-    </article>
-    <article>
-      Prequisites: Know how to build and train Neural Networks in tensorflow or Keras, Basic knowledge of probability theory and Markov decision processes.
-      </article>
-      <article>
-        Bonus for having knowledge in: Mainstream RL algorithms. Mathematical Logic.
-      </article>
+</article>
+<h5>&nbsp;&nbsp;<strong>Topics</strong></h5>
+<article>
+<p>
+<ul>
+<li>  The lecture and tutorials are held in English.</li>
+<li>  The course is open to TU students as well as exchange students and visiting students.</li>
+<li>  No formal registration is required to attend the course or even possible. The registration is only relevant for the exam.</li>
+<li>  The exam registration procedure is announced in the first lecture. Prior registration/reservation is not possible.</li>
+<li>  Each student has to present at least one paper on a state of the art algorithm in RL (A list of papers will be uploaded soon).</li>
+<li>  Students can form groups and apply at least one of the algorithms to the toy-model of their choice.</li>
+</ul>
+</p>
+ </article>
     </div>
     </div>
   </div>
