--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -25,12 +25,18 @@
 <article>
 <p>
 <ul>
-<li>  The lecture and tutorials are held in English.</li>
-<li>  The course is open to TU students as well as exchange students and visiting students.</li>
-<li>  No formal registration is required to attend the course or even possible. The registration is only relevant for the exam.</li>
-<li>  The exam registration procedure is announced in the first lecture. Prior registration/reservation is not possible.</li>
-<li>  Each student has to present at least one paper on a state of the art algorithm in RL (A list of papers will be uploaded soon).</li>
-<li>  Students can form groups and apply at least one of the algorithms to the toy-model of their choice.</li>
+	<li>Partial observability on Reinforcement learning.</li>
+	<li>RL methods for training multiple-agents.</li>
+	<li>RL and meta learning</li>
+</ul>
+</p>
+ </article>
+<h5>&nbsp;&nbsp;<strong>Prequisites</strong></h5>
+<article>
+<p>
+<ul>
+<li>Solid mathematical knowledge: analysis, linear algebra, probability calculus and statistics.</li>
+	<li>Basic programming skills, preferably Python</li>
 </ul>
 </p>
  </article>
