--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -4,7 +4,7 @@
 <div class="container">
 	<div class="panel panel-default">
     <div class="panel-body">
-<img class="image"       img src="{{ site.baseurl }}/static/img/2in1.png"> 
+<img src="{{ site.baseurl }}/static/img/2in1.png" width="100" height="50"> 
   <h3>Available topics</h3>
 		<h5>
 			&nbsp;&nbsp;<strong>General Information</strong>
