--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -1,10 +1,10 @@
 
 
-<section id="Advanced topics in RReinforcement learning">
+<section id="Advanced topics in Reinforcement learning">
 <div class="container">
 	<div class="panel panel-default">
     <div class="panel-body">
-<img src="{{ site.baseurl }}/static/img/2in1.png" width="400" height="150"> 
+<img src="{{ site.baseurl }}/static/img/2in1.png" width="700" height="220"> 
   <h3>Available topics</h3>
 		<h5>
 			&nbsp;&nbsp;<strong>General Information</strong>
