--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -2,9 +2,9 @@
 
 <section id="Advanced topics in Reinforcement learning">
 <div class="container">
-	<div class="panel panel-default">
+	<div class="panel panel-default">2
     <div class="panel-body">
-<img src="{{ site.baseurl }}/static/img/2in1.png" width="700" height="220"> 
+<img src="{{ site.baseurl }}/static/img/2in1.png" width="730" height="250"> 
   <h3>Available topics</h3>
 		<h5>
 			&nbsp;&nbsp;<strong>General Information</strong>
