--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -4,7 +4,7 @@
 <div class="container">
 	<div class="panel panel-default">2
     <div class="panel-body">
-<img src="{{ site.baseurl }}/static/img/2in1.png" width="730" height="250"> 
+<img class="image" img src="{{ site.baseurl }}/static/img/2in1.png"> 
   <h3>Available topics</h3>
 		<h5>
 			&nbsp;&nbsp;<strong>General Information</strong>
