--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -2,10 +2,12 @@
 
 <section id="Advanced topics in Reinforcement learning">
 <div class="container">
+<div class="avatar2">
+<img class="image" img src="{{ site.baseurl }}/static/img/2in1.png"> 
+	</div>
 	<div class="panel panel-default">2
     <div class="panel-body">
-<img class="image" img src="{{ site.baseurl }}/static/img/2in1.png"> 
-  <h3>Available topics</h3>
+	<h3>Available topics</h3>
 		<h5>
 			&nbsp;&nbsp;<strong>General Information</strong>
 		</h5>
