--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -5,7 +5,7 @@
 <div class="avatar2">
 <img class="image" img src="{{ site.baseurl }}/static/img/2in1.png"> 
 	</div>
-	<div class="panel panel-default">2
+	<div class="panel panel-default">
     <div class="panel-body">
 	<h3>Available topics</h3>
 		<h5>
