--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -2,7 +2,7 @@
 
 <section id="Advanced topics in Reinforcement learning">
 <div class="container">
-<div class="avatar2">
+<div class="container">
 <img class="image" img src="{{ site.baseurl }}/static/img/2in1.png" width="auto" max-width="700"> 
 	</div>
 	<div class="panel panel-default">
