--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -2,8 +2,8 @@
 
 <section id="Advanced topics in Reinforcement learning">
 <div class="container">
-<div class="container">
-<img class="image" img src="{{ site.baseurl }}/static/img/2in1.png" width="auto" max-width="700"> 
+<div class="avatar2">
+<img class="img" img src="{{ site.baseurl }}/static/img/2in1.png"> 
 	</div>
 	<div class="panel panel-default">
     <div class="panel-body">
