--- a/_includes/advanced_rl.html
+++ b/_includes/advanced_rl.html
@@ -3,7 +3,7 @@
 <section id="Advanced topics in Reinforcement learning">
 <div class="container">
 <div class="avatar2">
-<img class="img" img src="{{ site.baseurl }}/static/img/2in1.png"> 
+<img class="image" img src="{{ site.baseurl }}/static/img/2in1.png"> 
 	</div>
 	<div class="panel panel-default">
     <div class="panel-body">
