--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -66,7 +66,7 @@ on multi-agent cooperative tasks. The game of Hanabi</strong>
         </p>
          <p>
             <em>Likelihood of novel results&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
             &nbsp;&nbsp;
         </p>
     </article>
