--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -42,7 +42,44 @@ on multi-agent cooperative tasks. The game of Hanabi</strong>
     </div>
 	      <div class="panel-body">
 		<h5>
-			&nbsp;&nbsp;<strong> Risk-sensitive, partially-observable markov decision processes</strong>
+			&nbsp;&nbsp;<strong> Risk-sensitive, partially-observable markov decision processes. A theoretical project</strong>
+		</h5>
+      <article>
+        <p>
+           <span class="math inline"> Recently Google released a new testbed for RL. The game of Hanabi has many new complexities that older testbed games like Chess and Go
+             do not exhibit. Apart from a quite big state space, the game involves partial information and cooperation between agents. This cooperation is extremely difficult
+          to model because communication between agent can contain meta-information. Although agents that are trained together can achieve high scores, when aggents with different
+          learning experience meet, they exhibit poor performance. The goal is to apply meta-learning ideas to train the agents, so they will be able to adapt to new enviroments (different set of cooperative agents).
+          </span>
+        </p>
+        <p>
+            <em>Difficulty &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+        <p>
+            <em>Independence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </em>  <i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+         <p>
+            <em>Likelihood of novel results&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            &nbsp;&nbsp;
+        </p>
+    </article>
+    <article>
+      Prequisites: Know how to build and train Neural Networks in tensorflow or Keras, Basic knowledge of probability theory and Markov decision processes.
+      </article>
+      <article>
+        Bonus for having knowledge in: Mainstream RL algorithms. Mathematical Logic.
+      </article>
+    </div>
+	  	      <div class="panel-body">
+		<h5>
+			&nbsp;&nbsp;<strong> Risk-sensitive, partially-observable markov decision processes< with application on Texas Hold'em/strong>
 		</h5>
       <article>
         <p>
