--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -79,7 +79,7 @@ on multi-agent cooperative tasks. The game of Hanabi</strong>
     </div>
 	  	      <div class="panel-body">
 		<h5>
-			&nbsp;&nbsp;<strong> Risk-sensitive, partially-observable markov decision processes< with application on Texas Hold'em/strong>
+			&nbsp;&nbsp;<strong> Risk-sensitive, partially-observable markov decision processes with application on Texas Hold'em</strong>
 		</h5>
       <article>
         <p>
@@ -98,12 +98,12 @@ on multi-agent cooperative tasks. The game of Hanabi</strong>
         <p>
             <em>Independence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-          </em>  <i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+          </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
             &nbsp;&nbsp;
         </p>
          <p>
             <em>Likelihood of novel results&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
             &nbsp;&nbsp;
         </p>
     </article>
