--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -146,7 +146,7 @@ and there is need for testing this model with some numerical experiments. The pr
       Prequisites: Know how to build and train Neural Networks in tensorflow or Keras, Basic knowledge of probability theory and Markov decision processes.
       </article>
       <article>
-        Bonus for having knowledge in: Mainstream RL algorithms. Mathematical Logic.
+         Bonus for having knowledge in/experience with: GANS.
       </article>
     </div>
     </div>
