--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -39,6 +39,9 @@ on multi-agent cooperative tasks. The game of Hanabi</strong>
       <article>
         Bonus for having knowledge in: Mainstream RL algorithms. Mathematical Logic.
       </article>
+	          <article>
+        The project is quite demanding. It is more suitable for a master than a bachelor thesis (unless you really need aa challenge in your life). It can lead to a PhD.  
+      </article>
 	  </div>
     </div>
   </div>
