--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -40,7 +40,7 @@ on multi-agent cooperative tasks. The game of Hanabi</strong>
         Bonus for having knowledge in: Mainstream RL algorithms. Mathematical Logic.
       </article>
 	          <article>
-        The project is quite demanding. It is more suitable for a master than a bachelor thesis (unless you really need aa challenge in your life). It can lead to a PhD.  
+        <strong>The project is quite demanding. It is more suitable for a master than a bachelor thesis (unless you really need aa challenge in your life). It can lead to a PhD.</strong>  
       </article>
 	  </div>
     </div>
