--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -4,8 +4,7 @@
   <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
-			&nbsp;&nbsp;<strong>  Meta-learning techniques in Reinforcement Learning, with applications
-on multi-agent cooperative tasks. The game of Hanabi</strong>
+			&nbsp;&nbsp;<strong>  Meta-learning techniques for few-shot behavior prediction in multi-agent Ad-Hoc cooperation. The game of Hanabi</strong>
 		</h5>
       <article>
         <p>
@@ -19,6 +18,45 @@ on multi-agent cooperative tasks. The game of Hanabi</strong>
             <em>Difficulty &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
               &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           </em> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
+            &nbsp;&nbsp;
+        </p>
+        <p>
+            <em>Independence&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+         <p>
+            <em>Likelihood of novel results&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+           </em>  <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i>
+            &nbsp;&nbsp;
+        </p>
+    </article>
+    <article>
+      Prequisites: Know how to build and train Neural Networks in tensorflow or Keras, Basic knowledge of probability theory and Markov decision processes.
+      </article>
+      <article>
+        Bonus for having knowledge in: Mainstream RL algorithms. Mathematical Logic.
+      </article>
+	          <article>
+        <strong>The project is quite demanding. It is more suitable for a master than a bachelor thesis (unless you really need aa challenge in your life). It can lead to a PhD.</strong>  
+      </article>
+	  </div>
+    </div>
+	 <div class="panel panel-default">
+    <div class="panel-body">
+		<h5>
+			&nbsp;&nbsp;<strong>  Meta-learning techniques for few-shot image classification.</strong>
+		</h5>
+      <article>
+        <p>
+           <span class="math inline"> The goal is to analyse, compare and potentially extend meta-learning ideas in classification of images.
+          </span>
+        </p>
+        <p>
+            <em>Difficulty &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+              &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          </em> <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i><i class="fa fa-star-o"></i>
             &nbsp;&nbsp;
         </p>
         <p>
