--- a/_includes/MTT.html
+++ b/_includes/MTT.html
@@ -72,13 +72,10 @@
         </p>
     </article>
     <article>
-      Prequisites: Know how to build and train Neural Networks in tensorflow or Keras, Basic knowledge of probability theory and Markov decision processes.
+      Prequisites: Know how to build and train Neural Networks. Basic knowledge of probability theory.
       </article>
       <article>
-        Bonus for having knowledge in: Mainstream RL algorithms. Mathematical Logic.
-      </article>
-	          <article>
-        <strong>The project is quite demanding. It is more suitable for a master than a bachelor thesis (unless you really need aa challenge in your life). It can lead to a PhD.</strong>  
+        Bonus for having knowledge in: Meta-learning ideas.
       </article>
 	  </div>
     </div>
